[project]
name = "recommendation_system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.12",
    "numpy",
    "python-dotenv>=1.2.2",
    "scipy==1.16.0",
    "sentence-transformers==4.1.0",
    "langchain-openai",
    "httpx==0.27.0",
]
